complete header and to fix responsive menu

--- a/index.html
+++ b/index.html
@@ -14,31 +14,76 @@
     <header>
         <div id="imagenstopo">
             <img src="media/logomf.png" alt="logo mossoró farma" id="logomf">
-            <div class="imgtopright">
-                <img src="media/fblogo.png" alt="logo Facebook">
-                <img src="media/wpplogo.png" alt="logo Whatsapp">
-                <img src="media/Instlogo.png" alt="logo Instagram">
-                <img src="media/emlogo.png" alt="logo email" class="emlogo">
+            <div class="searchbox">
+                <form action="">
+                    <input type="image" src="media/lupawithback.jpg" style="float: left;" value="Pesquisar">
+                    <input type="text" id="search" placeholder="O que você procura?">
+                </form>
             </div>
         </div>
-        <hr>
+
+        <div id="login">
+            <P>Olá, Bem vindo!</P>
+            <p class="blueb"><a href="#">Entrar</a></p>
+        </div>
+        <div id="cesta">
+            <p>Minhas</p>
+            <p class="blueb"><a href="#">Compras</a></p>
+        </div>
+
+        <img src="media/login.png" alt="login image" id="loginimg">
+        <img src="media/cesta.png" alt="minhas compras image" id="cestaimg">
     </header>
 
     <main>
         <!-- divisão e ínicio Menu Principal-->
-        <ul class="nobullets">
-            <li><a href="#">Início</a></li>
-            <li><a href="#">Promoções</a></li>
-            <li><a href="#">Medicamentos</a></li>
-            <li><a href="#">Cosméticos</a></li>
-            <li><a href="#">Saúde e bem estar</a></li>
-        </ul>
-        <hr>
+        <nav>
+            <ul class="menu">
+                <li><a href="#">Início</a></li>
+                <li><a href="#">Promoções</a></li>
+                <li><a href="#">Medicamentos</a></li>
+                <li><a href="#">Cosméticos</a></li>
+                <li><a href="#">Saúde e bem estar</a></li>
+            </ul>
+        </nav>
+
         <!--divisão e ínicio Banner Rotativo-->
+
+
 
         <img src="media/bannerex.jpg" alt="exemplo banner">
 
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum dolor mollitia voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit provident vel, totam suscipit!</p>
+
+
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum dolor mollitia
+            voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit provident vel,
+            totam suscipit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum
+            dolor mollitia voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit
+            provident vel, totam suscipit!</p>
+
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum dolor mollitia
+            voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit provident vel,
+            totam suscipit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum
+            dolor mollitia voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit
+            provident vel, totam suscipit!</p>
+
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum dolor mollitia
+            voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit provident vel,
+            totam suscipit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum
+            dolor mollitia voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit
+            provident vel, totam suscipit!</p>
+
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum dolor mollitia
+            voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit provident vel,
+            totam suscipit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum
+            dolor mollitia voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit
+            provident vel, totam suscipit!</p>
+
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum dolor mollitia
+            voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit provident vel,
+            totam suscipit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad soluta eveniet quasi vero eum
+            dolor mollitia voluptatibus corporis, dolorum totam accusantium assumenda voluptatum. Vitae facilis impedit
+            provident vel, totam suscipit!</p>
     </main>
 
 </body>
